@@ -31,7 +31,7 @@ public class BeanToPropertyValueTransformerTestCase extends TestCase {
     private static final Float expectedFloatValue = new Float(123.123f);
     private static final Double expectedDoubleValue = Double.valueOf(567879.12344d);
     private static final Boolean expectedBooleanValue = Boolean.TRUE;
-    private static final Byte expectedByteValue = new Byte("12");
+    private static final Byte expectedByteValue = Byte.valueOf("12");
 
     /**
      * Constructor for BeanToPropertyValueTransformerTestCase.
