@@ -104,7 +104,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
         // Initialize the DynaBean's property values (like TestBean)
         bean.set("booleanProperty", new Boolean(true));
         bean.set("booleanSecond", new Boolean(true));
-        bean.set("byteProperty", new Byte((byte) 121));
+        bean.set("byteProperty", Byte.valueOf((byte) 121));
         bean.set("doubleProperty", Double.valueOf(321.0));
         bean.set("floatProperty", new Float((float) 123.0));
         final String[] dupProperty = { "Dup 0", "Dup 1", "Dup 2", "Dup 3", "Dup 4"};
@@ -184,7 +184,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
             fail("newInstance(): " + e);
         }
         orig.set("booleanProperty", Boolean.FALSE);
-        orig.set("byteProperty", new Byte((byte)111));
+        orig.set("byteProperty", Byte.valueOf((byte)111));
         orig.set("doubleProperty", Double.valueOf(333.33));
         orig.set("dupProperty", new String[] { "New 0", "New 1", "New 2" });
         orig.set("intArray", new int[] { 100, 200, 300 });
@@ -261,7 +261,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
             fail("newInstance(): " + e);
         }
         orig.set("booleanProperty", Boolean.FALSE);
-        orig.set("byteProperty", new Byte((byte)111));
+        orig.set("byteProperty", Byte.valueOf((byte)111));
         orig.set("doubleProperty", Double.valueOf(333.33));
         orig.set("dupProperty", new String[] { "New 0", "New 1", "New 2" });
         orig.set("intArray", new int[] { 100, 200, 300 });
@@ -477,7 +477,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
                      Boolean.TRUE,
                      map.get("booleanProperty"));
         assertEquals("Value of 'byteProperty'",
-                     new Byte((byte) 121),
+                     Byte.valueOf((byte) 121),
                      map.get("byteProperty"));
         assertEquals("Value of 'doubleProperty'",
                      Double.valueOf(321.0),
@@ -929,7 +929,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
      */
     public void testCopyPropertyByte() throws Exception {
 
-        BeanUtils.setProperty(bean, "byteProperty", new Byte((byte) 123));
+        BeanUtils.setProperty(bean, "byteProperty", Byte.valueOf((byte) 123));
         assertEquals((byte) 123, ((Byte) bean.get("byteProperty")).byteValue());
 /*
         BeanUtils.setProperty(bean, "byteProperty", new Double((double) 123));
@@ -951,7 +951,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
      */
     public void testCopyPropertyDouble() throws Exception {
 
-        BeanUtils.setProperty(bean, "doubleProperty", new Byte((byte) 123));
+        BeanUtils.setProperty(bean, "doubleProperty", Byte.valueOf((byte) 123));
         assertEquals(123, ((Double) bean.get("doubleProperty")).doubleValue(), 0.005);
         BeanUtils.setProperty(bean, "doubleProperty", Double.valueOf(123));
         assertEquals(123, ((Double) bean.get("doubleProperty")).doubleValue(), 0.005);
@@ -971,7 +971,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
      */
     public void testCopyPropertyFloat() throws Exception {
 
-        BeanUtils.setProperty(bean, "floatProperty", new Byte((byte) 123));
+        BeanUtils.setProperty(bean, "floatProperty", Byte.valueOf((byte) 123));
         assertEquals(123, ((Float) bean.get("floatProperty")).floatValue(), 0.005);
         BeanUtils.setProperty(bean, "floatProperty", Double.valueOf(123));
         assertEquals(123, ((Float) bean.get("floatProperty")).floatValue(), 0.005);
@@ -991,7 +991,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
      */
     public void testCopyPropertyInteger() throws Exception {
 
-        BeanUtils.setProperty(bean, "longProperty", new Byte((byte) 123));
+        BeanUtils.setProperty(bean, "longProperty", Byte.valueOf((byte) 123));
         assertEquals(123, ((Integer) bean.get("intProperty")).intValue());
 /*
         BeanUtils.setProperty(bean, "longProperty", new Double((double) 123));
@@ -1013,7 +1013,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
      */
     public void testCopyPropertyLong() throws Exception {
 
-        BeanUtils.setProperty(bean, "longProperty", new Byte((byte) 123));
+        BeanUtils.setProperty(bean, "longProperty", Byte.valueOf((byte) 123));
         assertEquals(123, ((Long) bean.get("longProperty")).longValue());
 /*
         BeanUtils.setProperty(bean, "longProperty", new Double((double) 123));
@@ -1046,7 +1046,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
      */
     public void testCopyPropertyShort() throws Exception {
 
-        BeanUtils.setProperty(bean, "shortProperty", new Byte((byte) 123));
+        BeanUtils.setProperty(bean, "shortProperty", Byte.valueOf((byte) 123));
         assertEquals((short) 123, ((Short) bean.get("shortProperty")).shortValue());
 /*
         BeanUtils.setProperty(bean, "shortProperty", new Double((double) 123));
@@ -1082,7 +1082,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
                       intChanged);
 
         // Widening conversion required
-        BeanUtils.copyProperty(bean, "nested.intArray[1]", new Byte((byte) 2));
+        BeanUtils.copyProperty(bean, "nested.intArray[1]", Byte.valueOf((byte) 2));
         checkIntArray((int[]) bean.get("intArray"), origArray);
         intChanged[1] = 2;
         checkIntArray(((TestBean) bean.get("nested")).getIntArray(),
@@ -1140,7 +1140,7 @@ public class DynaBeanUtilsTestCase extends TestCase {
         assertEquals(1, nested.getIntProperty());
 
         // Widening conversion required
-        BeanUtils.copyProperty(bean, "nested.intProperty", new Byte((byte) 2));
+        BeanUtils.copyProperty(bean, "nested.intProperty", Byte.valueOf((byte) 2));
         assertEquals(0, ((Integer) bean.get("intProperty")).intValue());
         assertEquals(2, nested.getIntProperty());
 
