@@ -112,7 +112,7 @@ public class FloatConverterTestCase extends NumberConverterTestBase<Float> {
             "1.1",
             "17.2",
             String.valueOf(Float.MAX_VALUE),
-            new Byte((byte)7),
+            Byte.valueOf((byte)7),
             new Short((short)8),
             Integer.valueOf(9),
             Long.valueOf(10),
