@@ -141,7 +141,7 @@ public class IntegerConverterTestCase extends NumberConverterTestBase<Integer> {
             "1",
             "17",
             String.valueOf(Integer.MAX_VALUE),
-            new Byte((byte)7),
+            Byte.valueOf((byte)7),
             new Short((short)8),
             Integer.valueOf(9),
             Long.valueOf(10),
